2002-11-03  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (load_config_from_gconf):
	* src/totem.c: (totem_action_set_mrl), (main): Remove the logo stuff
	from the GtkXine widget and into totem itself

2002-11-03  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am: update to test for unstable libgnomeui (wheee,
	nifty icons in the menu for recent files)
	* src/input_gnomevfs.c: (gnomevfs_plugin_read),
	(gnomevfs_plugin_get_optional_data), (gnomevfs_klass_open):
	clean up debug

2002-11-02  Bastien Nocera  <hadess@hadess.net>

	* src/input_gnomevfs.c: (gnomevfs_plugin_get_capabilities),
	(gnomevfs_plugin_read), (gnomevfs_plugin_read_block),
	(gnomevfs_plugin_get_mrl), (gnomevfs_plugin_get_optional_data),
	(gnomevfs_klass_open): fix gnomevfs_klass_open (this->fh was never
	assigned the file handle), clean up the rest of the file

2002-10-31  Bastien Nocera  <hadess@hadess.net>

	* data/playlist-playing.png:
	* data/rhythmbox-volume-max.png:
	* data/rhythmbox-volume-medium.png:
	* data/rhythmbox-volume-min.png:
	* data/rhythmbox-volume-zero.png: updated with icons from Luca
	Ferretti <elle.uca@libero.it>

2002-10-31  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: added lirc_example to EXTRA_DIST

2002-10-30  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_instance_init), (frame_output_cb),
	(load_audio_out_driver), (load_config_from_gconf),
	(gtk_xine_realize), (xine_event), (gtk_xine_set_audio_channel),
	(gtk_xine_get_audio_channel), (gtk_xine_can_set_volume): plenty of
	fixes, save the config file in a place different from the one
	libgnomeui uses, load from gconf on instance_init, remove old code

2002-10-29  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* configure.in: Add Japanese 'ja' to ALL_LINGUAS

2002-10-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (drop_cb): fix dropping a file that's not local
	* src/gtk-xine.c: (gtk_xine_realize): remove the codec reporting